--- a/.github/workflows/cucumber.yml
+++ b/.github/workflows/cucumber.yml
@@ -28,6 +28,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.45.0-jammy
+    env:
+      BASE_URL: ${{ secrets.BASE_URL }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
