--- a/.github/workflows/cucumber.yml
+++ b/.github/workflows/cucumber.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  merge_group:
   workflow_dispatch:
 
 jobs:
@@ -21,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Lint code
-        run: npm run lint:ci
+        run: npm run lint
 
   cucumber:
     timeout-minutes: 60
