chore: update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -2,12 +2,16 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
   "timezone": "Europe/Vilnius",
-  "schedule": "after 10pm, before 5:00am",
-  "groupName": "all-dependencies",
-  "matchUpdateTypes": ["patch", "minor", "major"],
-  "automerge": true,
-  "automergeType": "pr",
-  "major": {
-    "automerge": false
-  }
+  "schedule": ["after 10pm and before 5:00am"],
+  "packageRules": [
+    {
+      "groupName": "all-dependencies",
+      "matchUpdateTypes": ["patch", "minor", "major"],
+      "automerge": true,
+      "automergeType": "pr",
+      "major": {
+        "automerge": false
+      }
+    }
+  ]
 }
